# HW08

./: load_data.py  main.py  models.py  notes.py  pyproject.toml
tascs/: consumer.py  producer.py
